// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NewsletterPuffLink renders the link with the text \`Manage preferences here\` 1`] = `
<View
  accessible={true}
  focusable={true}
  isTVSelectable={true}
  nativeBackgroundAndroid={
    Object {
      "attribute": "selectableItemBackground",
      "type": "ThemeAttrAndroid",
    }
  }
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={Object {}}
>
  <View
    className="inline-newsletter-puff__InpPreferencesView-sc-13hmjc-12 eowBYw"
  >
    <Text
      className="inline-newsletter-puff__InpPreferencesText-sc-13hmjc-10 fjWboP"
    >
      Manage preferences here
    </Text>
    <View
      className="inline-newsletter-puff__InpIconContainer-sc-13hmjc-11 fjCqVn"
    >
      <RNSVGSvgView
        align="xMidYMid"
        aria-label="icon-forward-arrow"
        bbHeight={12}
        bbWidth={7}
        focusable={false}
        height={12}
        meetOrSlice={0}
        minX={42}
        minY={12}
        style={
          Array [
            Object {
              "backgroundColor": "transparent",
              "borderWidth": 0,
            },
            undefined,
            Object {
              "opacity": 1,
            },
            Object {
              "flex": 0,
              "height": 12,
              "width": 7,
            },
          ]
        }
        vbHeight={120}
        vbWidth={60}
        width={7}
      >
        <RNSVGGroup
          fill={
            Array [
              0,
              -16777216,
            ]
          }
          fillOpacity={1}
          fillRule={1}
          font={Object {}}
          matrix={
            Array [
              1,
              0,
              0,
              1,
              0,
              0,
            ]
          }
          opacity={1}
          originX={0}
          originY={0}
          propList={Array []}
          rotation={0}
          scaleX={1}
          scaleY={1}
          skewX={0}
          skewY={0}
          stroke={null}
          strokeDasharray={null}
          strokeDashoffset={null}
          strokeLinecap={0}
          strokeLinejoin={0}
          strokeMiterlimit={4}
          strokeOpacity={1}
          strokeWidth={1}
          vectorEffect={0}
          x={0}
          y={0}
        >
          <RNSVGGroup
            fill={
              Array [
                0,
                -16750951,
              ]
            }
            fillOpacity={1}
            fillRule={1}
            font={Object {}}
            matrix={
              Array [
                1,
                0,
                0,
                1,
                0,
                0,
              ]
            }
            opacity={1}
            originX={0}
            originY={0}
            propList={
              Array [
                "fill",
              ]
            }
            rotation={0}
            scaleX={1}
            scaleY={1}
            skewX={0}
            skewY={0}
            stroke={null}
            strokeDasharray={null}
            strokeDashoffset={null}
            strokeLinecap={0}
            strokeLinejoin={0}
            strokeMiterlimit={4}
            strokeOpacity={1}
            strokeWidth={1}
            vectorEffect={0}
            x={0}
            y={0}
          >
            <RNSVGPath
              d="M45.8,132L42,128.2,74.8,72,42,15.8,45.8,12,102,72Z"
              fill={
                Array [
                  0,
                  -16777216,
                ]
              }
              fillOpacity={1}
              fillRule={1}
              matrix={
                Array [
                  1,
                  0,
                  0,
                  1,
                  0,
                  0,
                ]
              }
              opacity={1}
              originX={0}
              originY={0}
              propList={Array []}
              rotation={0}
              scaleX={1}
              scaleY={1}
              skewX={0}
              skewY={0}
              stroke={null}
              strokeDasharray={null}
              strokeDashoffset={null}
              strokeLinecap={0}
              strokeLinejoin={0}
              strokeMiterlimit={4}
              strokeOpacity={1}
              strokeWidth={1}
              vectorEffect={0}
              x={0}
              y={0}
            />
          </RNSVGGroup>
        </RNSVGGroup>
      </RNSVGSvgView>
    </View>
  </View>
</View>
`;

exports[`NewsletterPuffLink should track link viewed and clicked in analytics 1`] = `
Object {
  "0": Array [
    Object {
      "action": "Viewed",
      "attrs": Object {
        "article_parent_name": "RED BOX",
        "eventTime": "2018-01-01T00:00:00.000Z",
        "event_navigation_action": "navigation",
        "event_navigation_browsing_method": "automated",
        "event_navigation_name": "widget : puff : manage preferences here : displayed",
      },
      "component": "Page",
      "object": "NewsletterPuffLink",
    },
  ],
  "1": Array [
    Object {
      "action": "onPress",
      "attrs": Object {
        "article_parent_name": "RED BOX",
        "eventTime": "2018-01-01T00:00:00.000Z",
        "event_navigation_action": "navigation",
        "event_navigation_browsing_method": "click",
        "event_navigation_name": "widget : puff : manage preferences here",
      },
      "component": "NewsletterPuffLink",
      "object": "NewsletterPuffLink",
    },
  ],
}
`;

exports[`NewsletterPuffLink should track link viewed in analytics 1`] = `
Object {
  "0": Array [
    Object {
      "action": "Viewed",
      "attrs": Object {
        "article_parent_name": "RED BOX",
        "eventTime": "2018-01-01T00:00:00.000Z",
        "event_navigation_action": "navigation",
        "event_navigation_browsing_method": "automated",
        "event_navigation_name": "widget : puff : manage preferences here : displayed",
      },
      "component": "Page",
      "object": "NewsletterPuffLink",
    },
  ],
}
`;
